update notes; quickSort

--- a/template/Makefile
+++ b/template/Makefile
@@ -1,4 +1,6 @@
-main: main.o
-	g++ main.o -o main
+main: main.o List.o
+	g++ main.o List.o -o main
 main.o: main.cpp List.h Cat.h
 	g++ -c main.cpp -o main.o
+List.o: List.cpp List.h
+	g++ -c List.cpp -o List.o
