--- a/TreeDemo/Makefile
+++ b/TreeDemo/Makefile
@@ -1,6 +1,6 @@
-main: main.o TreeNode.o
-	g++ main.o TreeNode.o -o main
+main: main.o Tree.o
+	g++ main.o Tree.o -o main
 main.o: main.cpp
 	g++ -c main.cpp -o main.o
-TreeNode.o: TreeNode.cpp
-	g++ -c TreeNode.cpp -o TreeNode.o
+Tree.o: Tree.cpp
+	g++ -c Tree.cpp -o Tree.o
