virtual destructor desc

--- a/constructor/Makefile
+++ b/constructor/Makefile
@@ -1,7 +1,9 @@
-main: main.o Person.o Hobby.o
-	g++ main.o Person.o Hobby.o -o main
+main: main.o Czf.o Person.o Hobby.o
+	g++ main.o Czf.o Person.o Hobby.o -o main
 main.o: main.cpp Person.h
 	g++ -c main.cpp -o main.o
+Czf.o: Czf.cpp Czf.h
+	g++ -c Czf.cpp -o Czf.o
 Person.o: Person.cpp Person.h
 	g++ -c Person.cpp -o Person.o
 Hobby.o: Hobby.cpp Hobby.h
